--- a/front/src/components/device/rgb-Meter.css
+++ b/front/src/components/device/rgb-Meter.css
@@ -11,10 +11,10 @@
 }
 
 .rgb-meter-header {
-    border-radius: 10px;
     padding: 10px;
     min-height: 320px;
     position: relative;
+    z-index: 1;
 }
 
 .rgb-meter-body {
@@ -22,6 +22,7 @@
     justify-content: space-between;
     height: 100%;
     margin-top: 10px;
+    z-index: 0;
 }
 
 .body-left {
