--- a/front/src/AppEnter.css
+++ b/front/src/AppEnter.css
@@ -7,17 +7,24 @@
 	--dur1: 1s;
 	--dur2: 6s;
 }
+.main{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
 .component-preloader {
-	background-image: linear-gradient(145deg,var(--shade3),var(--shade2));
-	color: var(--fg);
 	display: flex;
 	font: 1em/1.5 Hind, sans-serif;
 	flex-direction: column;
-	height: 100vh;
+	height: 90%;
 	font-size: calc(16px + (32 - 16)*(100vw - 320px)/(2560 - 320));
 }
 .main-preloader {
 	margin: auto;
+}
+.progress-bar-container {
+    display: flex;
+    justify-content: center;
 }
 .preloader {
 	animation: largePopOut var(--dur1) linear;
