--- a/front/src/index.css
+++ b/front/src/index.css
@@ -26,5 +26,6 @@
 body {
   width: 100vw;
   height: 100vh;
-  background-color: darkgrey;
+  background-color: #e3e4e8;
+  background-image: linear-gradient(145deg,var(--shade3),var(--shade2));
 }
